--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "url": "https://github.com/huangyangteng/node-simple-server/issues"
   },
   "homepage": "https://github.com/huangyangteng/node-simple-server#readme",
-  "devDependencies": {
+  "devDependencies": {},
+  "dependencies": {
+    "dayjs": "^1.8.17"
   }
 }
